# pactrack

./: Cargo.toml  PKGBUILD  README.md  config_example.toml  dist-workspace.toml
.github/workflows/: rust.yml
src/: commands.rs  config.rs  icons.rs  main.rs  notifier.rs  parser.rs  scheduler.rs  state.rs  tray.rs
systemd/: pactrack.service
