[package]
name = "pactrack"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.5", features = ["derive"] }
dirs = "6"
env_logger = "0.11"
glib = "0.18"
gtk = { version = "0.18", features = ["v3_24"] }
libloading = "0.8"
log = "0.4"
notify-rust = "4.11"
serde = { version = "1", features = ["derive"] }
shell-words = "1.1"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
